<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered By Hendri Febriansyah</string>

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="education">Education</string>

    <!--Title and Description-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search…</string>
    <string name="text_description">asdsadsa ddasdasdkjksniwnsd sdsreradasdas</string>
    <string name="text_title">McDonal\'s</string>
    <string name="text_content_image">Images</string>

    <!--Navigation-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_place">Add Missing Place</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="rate_us">Rate Us</string>
    <string name="expand_all">Expand All</string>
    <string name="car_rent">Car Rent</string>
    <string name="hospitals">Hospitals</string>

    <!--Navigation-->
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow your business using online service!</string>
    <string name="create_account">Create Account</string>
    <string name="how_to_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>

    <!--Field-->
    <string name="enter_username">Enter Username</string>
    <string name="full_name">Full Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="select_your_age">Select Your Age</string>


    <!--OTP Screen-->
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on \n+62123456789</string>
    <string name="verify_code">Verify Code</string>

    <string name="forget_password_detail">Provide your accounts email for which your want to reset your password!</string>
    <string name="enter_email">Email</string>
    <string name="send_btn">Send</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_detail">Selection which contact detail should we use to reset your password?</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via mail:</string>
    <string name="email_value">support@gmail.com</string>
    <string name="phone_value">+62123456789</string>

    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your identity has been verified! Set your new password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="password_update">Password Updated</string>
    <string name="password_update_messagge">Your Password Has Been Updated!</string>
    <string name="submit_btn">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
</resources>
