<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".common.loginSignUp.RetailerStartUpScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/text_content_image"
            android:layout_marginTop="50dp"
            android:src="@drawable/connections" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/retailer_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/muli_light"
            android:text="@string/retailer_tag_line"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/black"
                android:onClick="callLoginScreen"
                tools:ignore="ButtonStyle"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginStart="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@color/black"
                android:onClick="callSingUpScreen"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/how_to_work"
            android:textColor="@color/black" />

    </LinearLayout>

</ScrollView>