<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".common.authentication.MakeSelection">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back"
            android:transitionName="transition_back_arrow_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="@string/make_selection"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_light"
            android:text="@string/make_selection_detail"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="50dp"
            android:background="@color/lightWhite"
            android:padding="10dp">
            
            <ImageView
                android:id="@+id/iv_mobile_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/smartphone"/>

            <TextView
                android:id="@+id/tv_mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_light"
                android:text="@string/via_sms"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/iv_mobile_icon"/>

            <TextView
                android:id="@+id/tv_mobile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_light"
                android:text="@string/phone_value"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_toRightOf="@id/iv_mobile_icon"
                android:layout_below="@id/tv_mobile_title"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:background="@color/lightWhite"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_mail_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/envelope"/>

            <TextView
                android:id="@+id/tv_mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_light"
                android:text="@string/via_mail"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/iv_mail_icon"/>

            <TextView
                android:id="@+id/tv_mail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_light"
                android:text="@string/email_value"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:layout_toEndOf="@id/iv_mail_icon"
                android:layout_below="@id/tv_mail_title"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"/>
        </RelativeLayout>

    </LinearLayout>


</ScrollView>